--- a/Instagram/Sign_Up.html
+++ b/Instagram/Sign_Up.html
@@ -4,7 +4,7 @@
      <head>
          <meta charset ="utf-8"/>
 		 <title>Sign up - Instagram</title>
-		 <link rel="stylesheet" href="Sign_up.css"/>
+		 <link rel="stylesheet" href="./Sign_up.css"/>
 		 <link rel="shortcut icon" type="image/png" href=".\images\instagram_logo.png"/>
      </head>
 	 <body class="design_problem">
